--- a/bank.web/WebContent/resources/css/styles.css
+++ b/bank.web/WebContent/resources/css/styles.css
@@ -1,31 +1,95 @@
+body{
+	padding:0px;
+	margin:0px;
+}
+
+
 #container {
+	background-color:rgb(50,50,50);
+	width:100%;
+	min-width:670px;
 	margin: 0 auto;
-	background-color:yellow;
-	max-width:1000px;
 }
 
 #header {
-	background-color: red;
+	background-color: #489b93;
 	width:100%;
-	height:70px;
+	height:auto;
+	min-height:116px;
+	border-bottom:4px solid #1e7770;
+}
+
+
+#content_wrapper{
+	background-color: rgb(240,240,240);
+	min-width:500px;
+	overflow-y:hidden;
+	overflow-x:scroll;	
+}
+
+
+#content{
+	margin: 0 auto;
+	width:75%;
+	height:500px;
+	min-width:640px;
 }
 
 #navigation {
-	background-color: green;
-	width:25%;
-	height:500px;
-	float:left
+	background-color: white;
+	position:relative;
+	float:left;
+	width:19.6%;
+	height:99.6%;
+	margin:0.2%;
+	min-width:124px;
 }
 
-#content {
-	background-color: blue;
-	float:left;
-	width:75%;
-	height:500px;
+#inner_content{
+	background-color:white;
+	float:right;
+	width:79%;
+	height:99%;
+	margin:0.2%;
+	padding:0.3%;
 }
 
 #footer {
-	 background-color: brown;
-	 height:100px;
+	 background-color: #489b93;
+	 height:236px;
 	 width:100%;
+	 border-top:4px solid #1e7770;
+}
+
+#inner_footer, #inner_header{
+	width:75%;
+	margin: 0 auto;
+}
+
+/* Menu.xhtml elements */
+
+#panelMenu {
+	width:100%;
+	font-size:16px;
+}
+
+.ui-panelmenu .ui-panelmenu-header{
+	background: none white;
+  	color: black;
+  	border-radius:0px;
+  	border:none;
+}
+
+.ui-state-hover{
+	background: none rgb(250,250,250)!important;
+}
+
+.ui-menuitem{
+	border:none;
+	border-left:3px solid #489b93;
+	border-radius:0px;
+}
+
+.ui-panelmenu .ui-panelmenu-content{
+	border:0!important;
 }
