--- a/bank.web/WebContent/resources/css/styles.css
+++ b/bank.web/WebContent/resources/css/styles.css
@@ -21,10 +21,10 @@ body{
 
 #content_wrapper{
 	background-color: rgb(240,240,240);
-	min-width:500px;
-	overflow:hidden;
-	overflow-y:hidden;
-	overflow-x:scroll;	
+	min-width: 500px;
+	overflow: hidden;
+	overflow-y: scroll;
+	overflow-x:	hidden;
 }
 
 
@@ -42,6 +42,7 @@ body{
 	width:19.6%;
 	height:99.6%;
 	margin:0.2%;
+	padding-bottom:0.3%;
 	min-width:124px;
 }
 
