--- a/bank/.settings/org.eclipse.wst.common.component
+++ b/bank/.settings/org.eclipse.wst.common.component
@@ -12,5 +12,9 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="bank.ws.war" deploy-path="/" handle="module:/resource/bank.ws/bank.ws">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
